# singleBeam

./: .gitignore  AD5932硬件手册简略.md  CMakeLists.txt  Makefile  README.md
api/: CMakeLists.txt  ad5932_api.c  ad5932_api.h
app/: CMakeLists.txt  ad5932_main.c  ad8338_gain_sweep_with_resistors.c  dac63001_main.c  fpga_udp_test.c  i2c_fpga.c  sbeam_test.c  test_lib_sbeam.c  test_sbeam.c  wavegen_app.c  wavegen_app.h
core/: sbeam.c  sbeam.h
dev/: ad5932.c  ad5932.h  dac63001.c  dac63001.h  fpga.c  fpga.h  net_listener.c  net_listener.h
driver/: CMakeLists.txt  ad5932_driver.c  ad5932_driver.h
protocol/: CMakeLists.txt  i2c_hal.c  i2c_hal.h  spi_hal.c  spi_hal.h
test/: CMakeLists.txt  test_api.c  test_app.c  test_cli.c  test_driver.c  test_protocol.c
test/mocks/: mock_ad5932_api.c  mock_ad5932_api.h  mock_ad5932_driver.c  mock_ad5932_driver.h  mock_spi.c  mock_spi.h
utils/: log.h
